objects/RR_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Assignee_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RR_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked when team member is available and should be included in round robin.</description>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RR_Team__c</fullName>
        <label>RR Team</label>
        <referenceTo>RR_Team__c</referenceTo>
        <relationshipLabel>RR Team Members</relationshipLabel>
        <relationshipName>RR_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RR Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RR Team Assignment Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RR Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>